fix spacing on contact page

--- a/src/scss/contactmain.scss
+++ b/src/scss/contactmain.scss
@@ -32,21 +32,31 @@
 }
 
 .container {
+  /*display: flex;
+  flex-direction: column;
+  justify-content: center;*/
+  margin-right: auto;
+  margin-left: auto;
   padding: 15px;
   padding-top: 30px;
   text-align: center;
   color: #54585a 100%;
   font-family: "Open Sans", sans-serif;
+  @media all and (min-width: 768px) {
+    max-width: 442px;
+  }
   @media all and (min-width: 1200px) {
     padding-top: 45px;
+    max-width: 601px;
   }
 }
+
 .title {
   line-height: 24px;
   padding-bottom: 15px;
   color: var(--color-title);
   text-transform: uppercase;
-  font-family: Rubik; /*porque no funciona esto??*/
+  font-family: "Rubik" sans-serif; /*porque no funciona esto??*/
 }
 
 .description {
@@ -55,11 +65,8 @@
     margin-left: auto;
     margin-right: auto;
   }
-  @media all and (min-width: 1200px) {
-    max-width: 601px;
-  }
 }
-.todos {
+.obligatory {
   padding: 20px;
   font-family: "Open Sans", sans-serif;
   font-size: 12px;
@@ -76,23 +83,55 @@
     width: 100vw;
     padding: 45px;
     padding-bottom: 30px;
+    max-width: 442px;
+  }
+  @media all and (min-width: 1200px) {
+    max-width: 601px;
   }
 }
 
-box.row {
-  @media all and (min-width: 1200px) {
-    display: flex;
-    flex-direction: row;
-  }
+.email {
+  display: flex;
+  flex-direction: column;
 }
+.telephone {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
 .asterisk {
   color: #099d8d;
 }
 
 label {
   text-align: left;
+  width: 100%;
   padding-bottom: 5px;
 }
+
+input[type="text"] {
+  width: 601px;
+}
+
+input[type="email"] {
+  @media all and (min-width: 1200px) {
+    width: 395px;
+    margin-right: 45px;
+  }
+}
+
+input[type="tel"] {
+  @media all and (min-width: 1200px) {
+    width: 162px;
+    flex-grow: 1;
+  }
+}
+
 input[type="submit"] {
   background-color: var(--color-title);
   color: #ffffff;
@@ -108,7 +147,7 @@ input[type="submit"] {
   }
 }
 
-input[class="box"] {
+.box {
   border: solid lightgray 1px;
   height: 45px;
   margin-bottom: 15px;
@@ -118,4 +157,5 @@ input[class="box"] {
   border: solid lightgray 1px;
   height: 105px;
   margin-bottom: 30px;
+  width: 601px;
 }
